<resources>
    <string name="app_name">Carjoz</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_cellular">cellular</string>
    <string name="title_camera">camera</string>
    <string name="title_location">location</string>
    <string name="title_settigs">settings</string>
    <string name="click_me">Click me!</string>
</resources>