<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_cellular"
        android:icon="@drawable/ic_action_cellular"
        android:title="@string/title_cellular"/>

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_action_camera"
        android:title="@string/title_camera" />
    <item
        android:id="@+id/navigation_location"
        android:icon="@drawable/ic_action_location"
        android:title="@string/title_location" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/title_settigs" />

</menu>