<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.carjoz.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_cellular"
        android:name="com.example.carjoz.cellularFragment"
        android:label="@string/title_cellular"
        tools:layout="@layout/fragment_cellular" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.carjoz.cameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" />
    <fragment
        android:id="@+id/navigation_location"
        android:name="com.example.carjoz.locationFragment"
        android:label="@string/title_location"
        tools:layout="@layout/fragment_location" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.carjoz.settingsFragment"
        android:label="@string/title_settigs"
        tools:layout="@layout/fragment_settings" />
</navigation>